# Kafka-edgeless

./: Cargo.toml  consumer.rs  main.rs  producer.rs
example redis kafka/: Cargo.toml  function.json  lib.rs  main.rs  redis_kafka.rs
