
[profile.dev]
panic = "abort"

[profile.release]
lto = true
opt-level = "z"
panic = "abort"
codegen-units = 1
strip = true

[package]
name = "counter"
version = "0.1.0"
edition = "2021"

[lib]
name = "counter"
path = "src/lib.rs"
crate-type = ["cdylib"]

[bin]
name = "main"
path = "main.rs"

[dependencies]
serde = {version="1", features=["derive"] }
serde_json = "1"
 
tokio = { version = "1", features = ["full"] } #framework per la prog asincrona rust
                                                # gestisce operaz asincrone con kafka
rdkafka = { version = "0.26", features = ["tokio-comp"] } # lib che gestisce kafka rust
log = "0.4" # lib gestiione log rust
anyhow = "1.0" # lib gestisce errori in rust